--- a/NucbaNFT/assets/styles.css
+++ b/NucbaNFT/assets/styles.css
@@ -33,7 +33,7 @@
 /* Header  */
 
 header {
-    background: var(--secondary);
+    background: linear-gradient(to bottom, #121e3c, var(--secondary));
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -116,7 +116,10 @@ main {
     width: 80%;
     min-width: 500px;
     font-weight: 800;
-    color: var(--text-white);
+    background: linear-gradient(to top, #30cfd0, #c43ad6);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 .hero-info p {
@@ -467,4 +470,135 @@ footer span {
     display: flex;
     justify-content: center;
     gap: 20px;
+}
+
+#menu-toggle,
+#cart-toggle,
+.menu-label {
+    display: none;
+}
+
+.cart {
+    position: absolute;
+    top: 65px;
+    right: 0;
+    padding: 50px 30px;
+    background: linear-gradient(to top, #121e3c, var(--background));
+    border-left: 1px solid var(--nav-bg);
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    height: calc( 100vh - 65px );
+    overflow-y: scroll;
+    display: none;
+    z-index: 2;
+}
+
+.cart::-webkit-scrollbar {
+    display: none;
+}
+
+.cart h2 {
+    color: var(--text-white);
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    background-color: #2323234e;
+    padding: 20px;
+    border: 1px solid var(--electric);
+    border-radius: 10px;
+}
+
+.cart-item img {
+    height: 65px;
+    width: 65px;
+}
+
+.item-info {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+}
+
+.item-title {
+    color: var(--text-white);
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.item-bid {
+    color: var(--text-gray);
+    font-weight: 300;
+    font-size: 12px;
+}
+
+.item-price {
+    background: linear-gradient(to right, #30cfd0, #c43ad6);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    font-size: 16px;
+    font-weight: 800;
+}
+
+.item-handler {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.quantity-handler {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 8px;
+    color: var(--text-white);
+    font-weight: 400;
+    border-radius: 5px;
+}
+
+.item-quantity {
+    color: var(--text-gray);
+}
+
+.up {
+    border: 1px solid var(--electric);
+}
+
+.down {
+    background-color: var(--secondary);
+    border: 1px solid var(--electric);
+}
+
+.divider {
+    border: 0.5px solid var(--electric);
+    margin-top: 20px;
+}
+
+.cart-total {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.cart-total p {
+    color: var(--text-white);
+    font-weight: 700;
+}
+
+.cart-total span {
+    color: var(--text-gray);
+    font-weight: 400;
+    font-size: 18px;
+}
+
+#cart-toggle:checked + .cart {
+    display: flex;
 }
