--- a/NucbaNFT/assets/mediaqueries.css
+++ b/NucbaNFT/assets/mediaqueries.css
@@ -3,11 +3,11 @@
         gap: 10px;
     }
 
-    .cart-icon {
+    /* .cart-icon {
         height: 33px;
         margin-right: 0rem;
         margin-top: 4px;
-    }
+    } */
     .navbar-list {
         position: absolute;
         top: 65px;
