--- a/NucbaNFT/assets/styles.css
+++ b/NucbaNFT/assets/styles.css
@@ -33,16 +33,17 @@
 /* Header  */
 
 header {
-    background: linear-gradient(to bottom, #121e3c, var(--secondary));
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 65px;
-    padding: 0px 30px;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
+    background: linear-gradient(to bottom, #121e3c, var(--background));
+  width: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 65px;
+  padding: 0px 30px 0px 30px;
+  margin: 0 auto;
+  z-index: 999999999;
 }
 
 .logo {
@@ -488,8 +489,10 @@ footer span {
     gap: 30px;
     height: calc( 100vh - 65px );
     overflow-y: scroll;
-    display: none;
+    /* display: none; */
     z-index: 2;
+    transform: translateX(200%);
+    transition: all 0.5s ease-in-out;
 }
 
 .cart::-webkit-scrollbar {
@@ -597,6 +600,11 @@ footer span {
     font-size: 18px;
 }
 
-#cart-toggle:checked + .cart {
+/* #cart-toggle:checked + .cart {
     display: flex;
+} */
+
+ #cart-toggle:checked + .cart {
+    transform: translateX(0%);
+    transition: all 0.5s ease-in-out;
 }
